kubernetes/merch-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merch-app
  namespace: hugo-espejel
  labels:
    app: merch-app
spec:
  selector:
    matchLabels:
      app: merch-app
  replicas: 1
  template:
    metadata:
      namespace: hugo-espejel
      labels:
        app: merch-app
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: merch-app
        image: hespejel/merch-app:latest2
        # change to hespejel/project1:latest if possible
        ports:
        - containerPort: 8080
