kubernetes/merch-app-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: hugo-espejel
  name: merch-app
spec:
  selector:
    app: merch-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
